# RPiFan

./: .gitignore  LICENSE  README.md  a.out  config.json  fan-control.service  main.cpp  main.py  pyproject.toml  rpifan.sh
src/: backend.py  frontend.py  shared.py
